--- a/app/templates/confirm_delete.html
+++ b/app/templates/confirm_delete.html
@@ -1,44 +1,38 @@
 {% extends './base.html' %}
 {% load i18n %}
 {% load svg_icons %}
-{% block content %}
-<div class="container-xl">
-    <div class="page-header">
-        <div class="row align-items-center">
-            <div class="col-auto">
-                <h2 class="page-title">
-                    <a href="{{object.get_absolute_url}}">
-                        <span class="text-primary">{% svg_icon "arrow_back" "icon-md" %}</span>
-                    </a>
-                    {{view.title}}
-                </h2>
+
+{% block page_title %}
+<h2 class="page-title">
+    <h2 class="page-title">{% svg_icon "delete" "icon" %} {% trans "Confirm Delete" %}</h2>
+</h2>
+{% endblock page_title %}
+{% block page_title_actions %}{% endblock page_title_actions %}
+
+{% block page_body %}
+<div class="row align-items-center">
+    <div class="col-lg-8 col-md-12 ml-auto mr-auto">
+        <div class="card">
+            <div class="card-header">
+                <h3 class="card-title">
+                    {% trans "Delete "{{object}}" ?" %}
+                </h3>
             </div>
-        </div>
-    </div>
-    <div class="row align-items-center">
-        <div class="col-lg-8 col-md-12 ml-auto mr-auto">
-            <div class="card">
-                <div class="card-header">
-                    <h3 class="card-title">
-                        {% trans "Delete "{{object}}" ?" %}
-                    </h3>
-                </div>
-                <div class="card-body">
-                    <p>{% trans "All objects bellow will be excluded!!" %}</p>
-                    <p>{% trans "Objects" %}</p>
-                    <ul>{{ extra_object|unordered_list }}</ul>
-                    <form method="post">
-                        {% csrf_token %}
-                        <hr>
-                        <div class="mt-3">
-                            <a class="btn btn-primary" href="{{ object.get_absolute_url }}">{% trans "Cancel" %}</a>
-                            <button class="btn btn-danger mr-4" type="submit">{% trans "Confirm" %}</button>
-                        </div>
-                    </form>
-                </div>
-                <div class="ribbon bg-red">{% svg_icon "trash" "icon-md" %}</div>
+            <div class="card-body">
+                <p>{% trans "All objects bellow will be excluded!!" %}</p>
+                <p>{% trans "Objects" %}</p>
+                <ul>{{ extra_object|unordered_list }}</ul>
+                <form method="post">
+                    {% csrf_token %}
+                    <hr>
+                    <div class="mt-3">
+                        <a class="btn btn-primary" href="{{ object.get_absolute_url }}">{% trans "Cancel" %}</a>
+                        <button class="btn btn-danger mr-4" type="submit">{% trans "Confirm" %}</button>
+                    </div>
+                </form>
             </div>
+            <div class="ribbon bg-red">{% svg_icon "trash" "icon-md" %}</div>
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock page_body %}
