--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,19 +1,41 @@
 {% load i18n %}
-<footer class="footer footer-transparent">
-    <div class="container-xl">
+<footer class="footer footer-transparent  d-print-none">
+    <div class="container">
         <div class="row text-center align-items-center flex-row-reverse">
-            <!--            <div class="col-lg-auto ml-lg-auto">-->
-            <!--                <ul class="list-inline list-inline-dots mb-0">-->
-            <!--                    <li class="list-inline-item"><a class="link-secondary" href="./docs/index.html">Documentação</a></li>-->
-            <!--                    <li class="list-inline-item"><a class="link-secondary" href="./faq.html">FAQ</a></li>-->
-            <!--                    <li class="list-inline-item"><a class="link-secondary" href="https://github.com/tabler/tabler"-->
-            <!--                                                    target="_blank">Source code</a></li>-->
-            <!--                </ul>-->
-            <!--            </div>-->
-            <div class="col-12 col-lg-auto mt-3 mt-lg-0 ml-auto mr-auto">
-                {{FOOTER_COPYRIGHT}}
-                <a class="link-secondary" href="{{FOOTER_LINK}}">{{FOOTER_TEXT}}</a>.
-                {% trans "All rights reserved" %} V. {{VERSION}}
+            <div class="col-lg-auto ms-lg-auto">
+                <ul class="list-inline list-inline-dots mb-0">
+                    <li class="list-inline-item"><a href="./docs/index.html" class="link-secondary">Documentation</a>
+                    </li>
+                    <li class="list-inline-item"><a href="./license.html" class="link-secondary">License</a></li>
+                    <li class="list-inline-item"><a href="https://github.com/tabler/tabler" target="_blank"
+                            class="link-secondary" rel="noopener">Source code</a></li>
+                    <li class="list-inline-item">
+                        <a href="https://github.com/sponsors/codecalm" target="_blank" class="link-secondary"
+                            rel="noopener">
+                            <!-- Download SVG icon from http://tabler-icons.io/i/heart -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon text-pink icon-filled icon-inline"
+                                width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                                fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path
+                                    d="M19.5 13.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" />
+                            </svg>
+                            Sponsor
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+                <ul class="list-inline list-inline-dots mb-0">
+                    <li class="list-inline-item">
+                        {{FOOTER_COPYRIGHT}}
+                        <a href="{{FOOTER_LINK}}" class="link-secondary">{{FOOTER_TEXT}}</a>.
+                        {% trans "All rights reserved" %}
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="./changelog.html" class="link-secondary" rel="noopener">{{VERSION}}</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
