--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,9 +2,7 @@
 {% load crispy_forms_tags %}
 {% load i18n %}
 {% load static %}
-{% block custom_css %}
-<link href="{% static 'dist/css/tabler-buttons.min.css' %}" rel="stylesheet" />
-{% endblock %}
+{% load svg_icons %}
 {% block body_html %}
 
 <body class="antialiased border-top-wide border-primary d-flex flex-column">
@@ -15,7 +13,7 @@
                 <div class="card-body">
                     <!--                <h2 class="mb-5 text-center">Login</h2>-->
                     <div class="text-center mb-4">
-                        <img alt="{{NAME_OF_ENTERPRISE}}" height="150" src="{% static 'logo.png' %}">
+                        <img alt="{{NAME_OF_ENTERPRISE}}" height="150" src="{% static 'logo.svg' %}">
                     </div>
                     <div class="text-muted">
                         {% if form.errors %}
@@ -31,7 +29,11 @@
                         <label class="form-label">{{form.password|as_crispy_field}}</label>
                     </div>
                     <div class="form-footer">
-                        <button class="btn btn-primary btn-block" type="submit">{% trans "Login" %}</button>
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-primary" type="submit">
+                                {% svg_icon "login" "icon" %} {% trans "Login" %}
+                            </button>
+                        </div>
                     </div>
                 </div>
             </form>
