navbar and header

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,6 +36,7 @@
 <body class="antialiased">
     <div class="wrapper">
         {% block navbar %}{% include "navbar_vertical.html" %}{% endblock %}
+        {% block header %}{% include "header.html" %}{% endblock %}
         <div class="page-wrapper">
             <div class="container-xl">
                 {% block page_header %}
