settings logout url and changing templates

--- a/app/templates/header_buttons.html
+++ b/app/templates/header_buttons.html
@@ -1,13 +1,16 @@
 {% load svg_icons %}
+{% load i18n %}
 <div class="nav-item d-none d-md-flex me-3">
     <div class="btn-list">
-        <a href="https://github.com/tabler/tabler" class="btn btn-outline-white" target="_blank" rel="noreferrer">
+        <a href="{{SOURCE_CODE_LINK}}" class="btn btn-outline-white" target="_blank" rel="noreferrer">
             {% svg_icon "brand_github" "icon" %}
-            Source code
+            {% trans "Source code" %}
         </a>
+        {% comment %}
         <a href="https://github.com/sponsors/codecalm" class="btn btn-outline-white" target="_blank" rel="noreferrer">
             {% svg_icon "brand_github" "icon text-pink" %}
             Sponsor
         </a>
+        {% endcomment %}
     </div>
 </div>
