--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,6 +1,7 @@
 {% extends './base.html' %}
 {% load i18n %}
 {% load static %}
+{% load svg_icons %}
 {% block body_html %}
 
 <body class="antialiased border-top-wide border-primary d-flex flex-column">
@@ -15,14 +16,7 @@
                 <p class="empty-subtitle text-muted">{{error_text}}</p>
                 <div class="empty-action">
                     <a class="btn btn-primary" href="{% url 'dashboard:dashboard'%}">
-                        <svg class="icon" fill="none" height="24" stroke="currentColor" stroke-linecap="round"
-                            stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0 0h24v24H0z" stroke="none" />
-                            <line x1="5" x2="19" y1="12" y2="12" />
-                            <line x1="5" x2="11" y1="12" y2="18" />
-                            <line x1="5" x2="11" y1="12" y2="6" />
-                        </svg>
+                        {% svg_icon "arrow_back" "icon" %}
                         {% trans "Go to Home" %}
                     </a>
                 </div>
