--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 {% load svg_icons %}
 <header class="navbar navbar-expand-md navbar-light d-none d-lg-flex d-print-none">
     <div class="container-xl">
@@ -19,7 +20,8 @@
                         <span class="input-icon-addon">
                             {% svg_icon "search" "icon" %}
                         </span>
-                        <input type="text" class="form-control" placeholder="Search…" aria-label="Search in website">
+                        <input type="text" class="form-control" placeholder="{% trans "Search…" %}"
+                            aria-label="{% trans "Search in website" %}">
                     </div>
                 </form>
             </div>
