--- a/app/templates/navbar_vertical.html
+++ b/app/templates/navbar_vertical.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'client:view' %}">
+                    <a class="nav-link" href="{% url 'client:view-add' %}">
                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                             {% svg_icon "user" "icon" %}
                         </span>
