--- a/app/client/templates/view.html
+++ b/app/client/templates/view.html
@@ -45,9 +45,29 @@
 {% endif %}
 <div class="card">
     <div class="card-body">
-        <div class="table-responsive">
-            {% render_table table %}
-        </div>
+        <form method="post" class="form form-inline" id='form-table'>
+            {% csrf_token %}
+            <input type="hidden" name="actions" value="actions">
+            <div class="d-flex justify-content-end mb-3">
+                <div class="w-auto">
+                    <div class="input-group input-group-flat">
+                        <select name="action_options" class="form-control" id="action_options">
+                            <option value="delete">{% trans "Delete" %}</option>
+                            <option value="edit">{% trans "Edit" %}</option>
+                        </select>
+                        <span class="input-group-text">
+                            <a href="javascript:{}" class="link-secondary" title="" onclick="return onClickConfirm();"
+                                data-bs-toggle="tooltip" data-bs-original-title="{% trans "Confirm" %}">
+                                {% svg_icon "check" "icon text-success" %}
+                            </a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="table-responsive">
+                {% render_table table %}
+            </div>
+        </form>
     </div>
 </div>
 {% include './modal.html' %}
@@ -57,7 +77,7 @@
 <script src="{% static 'base/dist/libs/jquery/jquery-3.6.0.min.js' %}"></script>
 <script src="{% static 'base/dist/libs/select2/js/select2.full.min.js' %}"></script>
 <script>
-    var hasError = "{{error}}";
+    var showModal = "{{showModal}}";
 </script>
 <script src="{% static 'client/js/client.js' %}"></script>
 {% endblock javascript %}
