--- a/app/templates/navbar_vertical.html
+++ b/app/templates/navbar_vertical.html
@@ -100,6 +100,16 @@
                         </a>
                     </div>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/">
+                        <span class="nav-link-icon d-md-none d-lg-inline-block">
+                            {% svg_icon "shield_lock" "icon" %}
+                        </span>
+                        <span class="nav-link-title">
+                            {% trans "Admin" %}
+                        </span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
