--- a/app/templates/header_options.html
+++ b/app/templates/header_options.html
@@ -2,7 +2,7 @@
 
 <div class="nav-item dropdown">
     <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
-        <span class="avatar avatar-sm" style="background-image: url({% static 'avatars/000m.jpg' %})"></span>
+        <span class="avatar avatar-sm" style="background-image: url({% static 'img/perfil.svg' %})"></span>
         <div class="d-none d-xl-block ps-2">
             <div>{{ user.get_full_name }}</div>
             <div class="mt-1 small text-muted">{{ user.groups.all.0 }}</div>
