new base class for fast development, occupation

--- a/app/client/templates/client/modal.html
+++ b/app/client/templates/client/modal.html
@@ -1,7 +1,7 @@
 {% load crispy_forms_tags %}
 {% load svg_icons %}
 {% load i18n %}
-<div class="modal modal-blur fade" id="modal-client" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal modal-blur fade" id="modal-form" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <form method="post" class="form form-control">
             <div class="modal-content">
