--- a/app/client/templates/occupation/view.html
+++ b/app/client/templates/occupation/view.html
@@ -112,9 +112,8 @@
 
 {% block javascript %}
 <script src="{% static 'base/dist/libs/jquery/jquery-3.6.0.min.js' %}"></script>
-<script src="{% static 'base/dist/libs/select2/js/select2.full.min.js' %}"></script>
 <script>
     var showModal = "{{show_modal}}";
 </script>
-<script src="{% static 'client/js/client.js' %}"></script>
+<script src="{% static 'occupation/js/occupation.js' %}"></script>
 {% endblock javascript %}
