--- a/app/financial/templates/financial_release/view.html
+++ b/app/financial/templates/financial_release/view.html
@@ -8,6 +8,8 @@
 {% load crispy_forms_tags %}
 
 {% block links %}
+<link href="{% static 'base/dist/libs/select2/css/select2.min.css' %}" rel="stylesheet" />
+<link href="{% static 'base/dist/libs/select2/css/select2-bootstrap.min.css' %}" rel="stylesheet" />
 {% endblock links %}
 
 {% block page_title %}
@@ -21,7 +23,7 @@
 {% block page_title_actions_items %}
 <a href="#" class="btn btn-primary d-none d-sm-inline-block" data-bs-toggle="modal" data-bs-target="#modal-form">
     {% svg_icon "plus" "icon" %}
-    {% trans "New Occupation" %}
+    {% trans "New Financial Release" %}
 </a>
 <a href="#" class="btn btn-primary d-sm-none btn-icon" data-bs-toggle="modal" data-bs-target="#modal-form">
     {% svg_icon "plus" "icon" %}
@@ -110,8 +112,9 @@
 
 {% block javascript %}
 <script src="{% static 'base/dist/libs/jquery/jquery-3.6.0.min.js' %}"></script>
+<script src="{% static 'base/dist/libs/select2/js/select2.full.min.js' %}"></script>
 <script>
     var showModal = "{{show_modal}}";
 </script>
-<script src="{% static 'client/js/occupation.js' %}"></script>
+<script src="{% static 'financial/js/financial_release.js' %}"></script>
 {% endblock javascript %}
