--- a/app/templates/navbar_vertical.html
+++ b/app/templates/navbar_vertical.html
@@ -88,8 +88,9 @@
                         </a>
                     </div>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" role="button"
+                <li
+                    class="nav-item dropdown {% if request.resolver_match.namespaces.0 == 'financial' %} active {% endif %}">
+                    <a class=" nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" role="button"
                         aria-expanded="false">
                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                             {% svg_icon "file_invoice" "icon" %}
@@ -99,6 +100,9 @@
                         </span>
                     </a>
                     <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url 'financial:financialrelease:view' %}">
+                            {% trans "Financial Release" %}
+                        </a>
                         <a class="dropdown-item" href=".">
                             {% trans "List" %}
                         </a>
