navbar links css/html

--- a/app/templates/navbar_vertical.html
+++ b/app/templates/navbar_vertical.html
@@ -35,8 +35,8 @@
                 </li>
                 <li class="nav-item dropdown
                  {% if request.resolver_match.namespaces.0 == 'client' %} active {% endif %}">
-                    <a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" role="button"
-                        aria-expanded="false">
+                    <a class="nav-link dropdown-toggle {% if request.resolver_match.namespaces.0 == 'client' %}show{% endif %}"
+                        href="#navbar-base" data-bs-toggle="dropdown" role="button" aria-expanded="false">
                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                             {% svg_icon "users" "icon" %}
                         </span>
@@ -44,7 +44,7 @@
                             {% trans "Clients" %}
                         </span>
                     </a>
-                    <div class="dropdown-menu">
+                    <div class="dropdown-menu {% if request.resolver_match.namespaces.0 == 'client' %}show{% endif %}">
                         <a class="dropdown-item" href="{% url 'client:client:view' %}">
                             {% trans "Clients" %}
                         </a>
@@ -53,9 +53,10 @@
                         </a>
                     </div>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" role="button"
-                        aria-expanded="false">
+                <li
+                    class="nav-item dropdown {% if request.resolver_match.namespaces.0 == 'service' %}active{% endif %}">
+                    <a class="nav-link dropdown-toggle {% if request.resolver_match.namespaces.0 == 'service' %}show{% endif %}"
+                        href="#navbar-base" data-bs-toggle="dropdown" role="button" aria-expanded="false">
                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                             {% svg_icon "browser" "icon" %}
                         </span>
@@ -63,7 +64,7 @@
                             {% trans "Service" %}
                         </span>
                     </a>
-                    <div class="dropdown-menu">
+                    <div class="dropdown-menu {% if request.resolver_match.namespaces.0 == 'service' %}show{% endif %}">
                         <a class="dropdown-item" href="{% url 'service:webservice:view' %}">
                             {% trans "Web Service" %}
                         </a>
@@ -80,8 +81,8 @@
                 </li>
                 <li
                     class="nav-item dropdown {% if request.resolver_match.namespaces.0 == 'financial' %} active {% endif %}">
-                    <a class=" nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" role="button"
-                        aria-expanded="false">
+                    <a class=" nav-link dropdown-toggle {% if request.resolver_match.namespaces.0 == 'financial' %}show{% endif %}"
+                        href="#navbar-base" data-bs-toggle="dropdown" role="button" aria-expanded="false">
                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                             {% svg_icon "file_invoice" "icon" %}
                         </span>
@@ -89,7 +90,8 @@
                             {% trans "Financial" %}
                         </span>
                     </a>
-                    <div class="dropdown-menu">
+                    <div
+                        class="dropdown-menu {% if request.resolver_match.namespaces.0 == 'financial' %}show{% endif %}">
                         <a class="dropdown-item" href="{% url 'financial:financialrelease:view' %}">
                             {% trans "Financial Release" %}
                         </a>
